# axum-multicrate

./: Cargo.toml  LICENSE  README.md  db.sqlite3
interface/: Cargo.toml
interface/src/: lib.rs
item/: Cargo.toml
item/src/: data.rs  lib.rs
src/: main.rs
users/: Cargo.toml
users/src/: data.rs  lib.rs
